# aleph_alpha_quickstart

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
aleph_alpha_quickstart/: complete.py  embedding.py  summarize.py
ressources/: einstein.txt  large_text.txt
